# earthquakes-bot

./: README.md  pyproject.toml
modules/: alerts.py  storage.py  timing.py  utils.py  when.py  where.py
modules/recipients/: __init__.py  file.py  irc.py  matrix.py  recipient.py  reddit.py  toot.py  tweet.py
modules/tables/: cities.py  earthquakes.py  keywords.py
