[tool.poetry]
name = "brainstorm"
version = "0.1.0"
description = "Earthquake/alert early warning and reporting bot"
authors = ["LjL (ljlbox@tiscali.it)"]

[tool.poetry.dependencies]
python = "^2.7.10"
obspy = "^1.2.1"
bs4 = "^0.0.1"
requests = "^2.23.0"
sleekxmpp = "^1.3.3"
cachecontrol = "^0.12.6"
cachetools = "*"
maya = "^0.6.1"
humanize = "*"
parsedatetime = "^2.5"
wrapt = "^1.12.1"
guess_language = "^0.2"
langid = "^1.1.6"
pyenchant = "*"
demjson = "^2.2.4"
pattern = "^3.6"
mistune = "^0.8.4"
praw = "5.4.0"
python-twitter = "^3.5"
us = "^2.0.2"
GeoIP = "^1.3.2"
geopy = "^1.22.0"
geocoder = "^1.38.1"
geojson = "^2.5.0"
overpass = "^0.7"
mobile_codes = "^0.7"
ipaddress = "^1.0.23"
countrynames = "1.6.0"
banal = "0.4.2"
timezonefinder = "3.4.2"
qualname = "^0.1.0"
matrix_client = "^0.3.2"
"mastodon.py" = "^1.5.1"
babel = "^2.8.0"
beautifulsoup = "^3.2.2"
systemd = "^0.16.1"
measurement = "3.1.0"
statistics = "^1.0.3"
ws4py = "*"
lxml = "^4.5.1"
guess-language = "^0.2"
langdetect = "^1.0.8"
subprocess32 = "^3.5.4"
reverse-geocode = "^1.4.1"
country_converter = "^0.6.7"
update_checker = "0.17"
lru_cache = "^0.2.3"
feedparser = "5.2.1"
pyicu = "^2.5"
tweepy = "^3.9.0"
pympler = "^0.9"
guppy = "^0.1.11"
reverse_geocoder = "^1.5.1"
pycld2 = "^0.41"
spacy = "2.3.2"
wsaccel = "^0.6.3"
ipython = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
